<resources>
    <string name="app_name">Arthik</string>
    <string name="facebook_app_id">807445397469281</string>
    <string name="choose_lang">Choose Your Language</string>
    <string name="choose_later">You can change this later from settings</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="urdu">Urdu</string>
    <string name="continuee">Continue</string>
    <string name="payment">Now you can manage all your loans, track progress, make payments, download statement, apply for new loan and much more at your fingertips</string>
    <string name="login">Existing Customer</string>
    <string name="register">New Customer</string>
    <string name="fingerprint_login">Login with Fingerprint</string>
    <string name="login_mpin">Login with Mpin</string>
    <string name="not_you"><font color='#FFFFFF'>Not You?</font> Use another account</string>
    <string name="reg_mob_no">Registered Mobile Number</string>
    <string name="enter_pin">Enter Mpin</string>
    <string name="forgot_mpin">Forgot Mpin?</string>
    <string name="login_otp">Login with OTP</string>
    <string name="dont_hav_account"><font color='#FFFFFF'>New Customer?</font> Register Now</string>
    <string name="your_name">Your Name <font color='#FF0000'>*</font></string>
    <string name="mob_no">Mobile Number <font color='#FF0000'>*</font></string>
    <string name="enter_mob_num">Enter mobile number</string>
    <string name="dob_format">DD/MM/YYYY</string>
    <string name="enter_email">Enter email ID <font color='#FF0000'>*</font></string>
    <string name="dob">Date of Birth <font color='#FF0000'>*</font></string>
    <string name="email_id">Email ID <font color='#FF0000'>*</font></string>
    <string name="accept_tos"><html>I accept <a href="https://arthan.finance/Termsandconditions"> Terms of Services</a> and agree with<a href="https://arthan.finance/Privacypolicy"> Privacy Policy</a> of Arthan Finance</html></string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="one_time_pw">One Time Password</string>
    <string name="enter_6_digit">Enter the 6 digit OTP sent on mobile number <b>XXXXXXXX98</b></string>
    <string name="enter_otp">Enter One Time Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="set_new_mpin">Set New Mpin</string>
    <string name="used_to_login">Please set up a 4 digit numeric code to access your application easily in future,in case you forget your MPIN, you can reset the same using OTP authentication.</string>
    <string name="enter_new_mpin">Enter New Mpin</string>
    <string name="setup_bio">Setup Biometric</string>
    <string name="finger_login">Fingerprint Login</string>
    <string name="use_finger">Use Fingerprint to log in for faster, secure &amp; easier access to your account</string>
    <string name="feature_on_off">You can turn this feature On or Off anytime from settings</string>
    <string name="enable_finger">Enable Fingerprint</string>
    <string name="not_now">Not Now</string>
    <string name="face_id_login">Face ID Login</string>
    <string name="use_face_id">Use Face ID to log in for faster, secure &amp; easier access to your account</string>
    <string name="enable_face_id">Enable Face ID</string>
    <string name="your_kyc_details">Your KYC Details</string>
    <string name="check_details">Check your details below, change if required and proceed</string>
    <string name="name">Name <font color='#FF0000'>*</font></string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mob_num">Mobile Number</string>
    <string name="upload_pan">Capture PAN</string>
    <string name="pan_num">PAN : BKOPY8778F</string>
    <string name="next">Next</string>
    <string name="login_face_id">Login with Face ID</string>
    <string name="manage">Arthik is powered by Arthan Finance, a RBI Registered NBFC. We value your privacy and your details are secured with us. Trusted by more than 50k+ MSMEs.</string>
    <string name="check">Experience effortless Limit approval within 2 minutes with your PAN &amp; Aadhaar card. Complete digital journey for your utmost convenience.</string>
    <string name="swipe_left">Swipe left to continue > ></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="need_help">Need Help?</string>
    <string name="personal_details">Personal Details</string>
    <string name="upload">Upload</string>
    <string name="camera">Camera</string>
    <string name="upload_adhar">Upload your Aadhaar Card</string>
    <string name="front_side">Front Side</string>
    <string name="back_side">Back Side</string>
    <string name="retake">Retake</string>
    <string name="bus_name">Business Name<font color='#FF0000'>*</font></string>
    <string name="doc">Date of Incorporation<font color='#FF0000'>*</font></string>
    <string name="constitution">Constitution<font color='#FF0000'>*</font></string>
    <string name="standard_loan">A standard loan processing  fees (2.5%) + GST will be applicable to you in order to continue</string>
    <string name="app_sub">Your Application has been completed and its ready to submit</string>
    <string name="Rs">\u20B9</string>
    <string name="percent">\u0025</string>
    <string name="city_name">City <font color='#FF0000'>*</font></string>
    <string name="state_name">State <font color='#FF0000'>*</font></string>
    <string name="pincode_name">Pincode <font color='#FF0000'>*</font></string>
    <string name="location">Your Location <font color='#FF0000'>*</font></string>
    <string name="business_location">Business Current Location <font color='#FF0000'>*</font></string>
    <string name="address1">Address Line 1 <font color='#FF0000'>*</font></string>
    <string name="address2">Address Line 2 <font color='#FF0000'>*</font></string>
    <string name="address3">Address Line 3 <font color='#FF0000'>*</font></string>
    <string name="re_enter_new_mpin">Re-Enter New MPin</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="notification_channel_id">default</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="demo_user_name">Jitesh Ramlaal Singh</string>
    <string name="your_pan_number">Pan Number<font color='#FF0000'>*</font></string>
    <string name="demo_date">09/05/1991</string>
    <string name="residence_address_label">Residence Address <font color='#FF0000'>*</font></string>
    <string name="demo_address">Arthan Finance , Near Ravi Talkies, Old Town, Bhubaneswar</string>
    <string name="capture">Capture</string>
    <string name="offline_kyc">Do Offline Kyc</string>
    <string name="aadhar_kyc">Proceed to Aadhar KYC</string>
    <string name="service_request">Service Request</string>
    <string name="view_loan_details">View Loan Details</string>
    <string name="generate_loan_statement">Generate Loan Statement</string>
    <string name="payment_of_dues">Payment of Dues</string>
    <string name="pre_closure_of_loan">Pre Closure Of Loan</string>
    <string name="apply_for_top_up_loan">Apply For Top Up Loan</string>
    <string name="insurance_certificate">Insurance Certificate</string>
    <string name="tranche_disbursement">Tranche Disbursement</string>
    <string name="interest_certificate">Interest Certificate</string>
    <string name="please_select_loan_account_to_proceed">Please Select Loan Account To Proceed</string>
    <string name="loan_account_number">Loan Account Number</string>
    <string name="dummy_loan_acc_num">xxxxxx4485</string>
    <string name="application_date">Application Date</string>
    <string name="dummy_loan_application_date">20 Dec 2021</string>
    <string name="borrower_name">Borrower Name</string>
    <string name="co_borrower">Co-borrower</string>
    <string name="dummy_borrower_name">Jitesh Ranjan Singh</string>
    <string name="na">NA</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="tenure">Tenure</string>
    <string name="monthly_emi">Monthly EMI</string>
    <string name="dummy_loan_tenure">36 Months</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="total_amount_paid">Total Amount Paid</string>
    <string name="total_amount_due">Total Amount Due</string>
    <string name="emi_paid">EMI(s) Paid</string>
    <string name="emi_due">EMI(s) Due</string>
    <string name="total_interest">Total Interest</string>
    <string name="make_payment">Make Payment</string>
    <string name="download_statement">Download Statement</string>
    <string name="repayment_schedule">Repayment schedule</string>
    <string name="share_details">Share Details</string>
    <string name="email_me">Email Me</string>
    <string name="download_pdf">Download PDF</string>
    <string name="processing_fee_and_charge">Processing Fee And Charge</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="loan_account">Loan Account</string>
    <string name="statment_period">Statement Period</string>
    <string name="loan_account_no">Loan Account No</string>
    <string name="statement_type">Statement Type</string>
    <string name="next_installment">Next Installment</string>
    <string name="other_charges_fees">Other Charges/Fees</string>
    <string name="lumpsum_amount">Lumpsum Amount</string>
    <string name="payment_type">Payment Type</string>
    <string name="outstanding_dues">Outstanding Dues</string>
    <string name="multiple_installments">Multiple Installments</string>
    <string name="due_date">Due Date</string>
    <string name="connect_to_an_executive">Connect To An Executive</string>
    <string name="see_nearest_branch">See Nearest Branch</string>
    <string name="completed">Completed</string>
    <string name="state">State</string>
    <string name="business_pan">Business Pan Number</string>
    <string name="udyog_aadhar">Udyam Aadhaar Number<font color='#FF0000'>*</font></string>
    <string name="gst_number">Gst Number</string>
    <string name="margin">Margin (%)<font color='#FF0000'>*</font></string>
    <string name="monthly_income">Monthly Income <font color='#FF0000'>*</font></string>
    <string name="monthly_expenses">Monthly Expenses <font color='#FF0000'>*</font></string>
    <string name="enter_address">Enter Address</string>
    <string name="category">Category <font color='#FF0000'>*</font></string>
    <string name="segment">Segment <font color='#FF0000'>*</font></string>
    <string name="type">Type <font color='#FF0000'>*</font></string>
    <string name="monthly_turnover">Monthly Turnover <font color='#FF0000'>*</font></string>
    <string name="address_same_as_residence">Address same as residence <font color='#FF0000'>*</font></string>
    <string name="ifsc_code">IFSC Code <font color='#FF0000'>*</font></string>
    <string name="account_number">Account Number <font color='#FF0000'>*</font></string>
    <string name="confirm_account_number">Confirm Account Number <font color='#FF0000'>*</font></string>
    <string name="bank_name">Bank Name <font color='#FF0000'>*</font></string>
    <string name="upi_id">UPI ID (Optional)</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string-array name="marital_status">
        <item>Select Marital Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Separated</item>
        <item>Divorced</item>
    </string-array>
    <string name="business_address_as_per_udyam">Business Address <font color='#FF0000'>*</font></string>
</resources>