<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/img_back_biometricface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="38dp"
            android:background="@drawable/ic_back"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@id/img_back_biometricface"
            android:text="@string/setup_bio"
            android:textColor="@color/indigo"
            android:textSize="22sp"
            android:layout_toEndOf="@id/img_back_biometricface"
            android:layout_marginStart="8dp" />

        <ImageView
            android:id="@+id/img_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_register"
            android:layout_marginTop="32dp"
            android:src="@drawable/face_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_finger_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_mobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/face_id_login"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv__use_fingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_finger_login"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="42dp"
            android:text="@string/use_face_id"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/turn_on_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv__use_fingerprint"
            android:layout_marginLeft="82dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="82dp"
            android:text="@string/feature_on_off"
            android:textColor="@color/light_grey"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/btn_not_now"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_register_rect_orange"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/enable_face_id"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_not_now"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="47dp"
            android:background="@drawable/bg_language_rect"
            android:gravity="center"
            android:text="@string/not_now"
            android:textAllCaps="false"
            android:textColor="@color/dark_orange2"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>
